# 9_games

./: pyproject.toml
docs/: Unbenanntes Diagramm.drawio  vocalno_docs.aux  vocalno_docs.tex
src/9_games/: volcano.py
src/games/: coord_converter.py  main.py  particle.py  planet.py  pyclock.py  settings.py  volcano.py
src/games/volcano_sim/: coord_converter.py  main.py  particle.py  pilot.py  planet.py  pyclock.py  volcano.py
tests/: test_main.py  test_particle.py  test_volcano.py
tests/volcano_sim/: test_volcano.py
